--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ img.emoji {
 		<div class="site-generator">
 		<div class="container">
 				
-            <span class="copyright">Theme of <a target="_blank" rel="designer" href="https://rigorousthemes.com/">Rigorous Themes</a></span>
+            <span class="copyright">Theme of <a target="_blank" rel="designer" href="https://maharishi15.github.io/Maharshi/">Maharshi</a></span>
 		</div>
 	</div>    
 		
